[gd_scene load_steps=4 format=2]

[ext_resource path="res://trash-can.png" type="Texture" id=1]
[ext_resource path="res://scrSettings.gd" type="Script" id=2]
[ext_resource path="res://settingsStylebox.tres" type="StyleBox" id=3]

[node name="settings" type="Position2D"]
position = Vector2( 0, 50 )
script = ExtResource( 2 )

[node name="p" type="PanelContainer" parent="."]
show_behind_parent = true
margin_right = 400.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v" type="VBoxContainer" parent="p"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 293.0
custom_constants/separation = 4

[node name="h" type="HBoxContainer" parent="p/v"]
margin_right = 386.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 5

[node name="Label" type="Label" parent="p/v/h"]
margin_right = 56.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 0
text = "Theme : "
valign = 1

[node name="o" type="OptionButton" parent="p/v/h"]
margin_left = 60.0
margin_right = 168.0
margin_bottom = 20.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "APillarOfSalt"
items = [ "GMS Red (Default)", null, false, 0, null, "HORUS Terminal", null, false, 1, null, "APillarOfSalt", null, false, 2, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirm" type="Button" parent="p/v"]
margin_left = 162.0
margin_top = 54.0
margin_right = 224.0
margin_bottom = 74.0
size_flags_horizontal = 4
text = "Confirm"

[node name="lcps" type="ScrollContainer" parent="p/v"]
margin_top = 78.0
margin_right = 386.0
margin_bottom = 262.0
size_flags_vertical = 3

[node name="v" type="VBoxContainer" parent="p/v/lcps"]
margin_right = 258.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="copy" type="PanelContainer" parent="p/v/lcps/v"]
visible = false
margin_right = 290.0
margin_bottom = 32.0
custom_styles/panel = ExtResource( 3 )

[node name="h" type="HBoxContainer" parent="p/v/lcps/v/copy"]
margin_left = 2.0
margin_top = 2.0
margin_right = 288.0
margin_bottom = 30.0

[node name="c" type="CheckBox" parent="p/v/lcps/v/copy/h"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v1" type="VSeparator" parent="p/v/lcps/v/copy/h"]
margin_left = 32.0
margin_right = 36.0
margin_bottom = 28.0

[node name="Label1" type="Label" parent="p/v/lcps/v/copy/h"]
margin_left = 40.0
margin_top = 7.0
margin_right = 105.0
margin_bottom = 21.0
text = "LCP Name"

[node name="v2" type="VSeparator" parent="p/v/lcps/v/copy/h"]
margin_left = 109.0
margin_right = 113.0
margin_bottom = 28.0

[node name="Label2" type="Label" parent="p/v/lcps/v/copy/h"]
margin_left = 117.0
margin_top = 7.0
margin_right = 192.0
margin_bottom = 21.0
text = "LCP Version"

[node name="v3" type="VSeparator" parent="p/v/lcps/v/copy/h"]
margin_left = 196.0
margin_right = 200.0
margin_bottom = 28.0

[node name="Label3" type="Label" parent="p/v/lcps/v/copy/h"]
margin_left = 204.0
margin_top = 7.0
margin_right = 254.0
margin_bottom = 21.0
text = "Enabled"

[node name="c2" type="CheckBox" parent="p/v/lcps/v/copy/h"]
margin_left = 258.0
margin_right = 286.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="PanelContainer" parent="p/v/lcps/v"]
margin_right = 258.0
margin_bottom = 32.0
custom_styles/panel = ExtResource( 3 )

[node name="h" type="HBoxContainer" parent="p/v/lcps/v/Title"]
margin_left = 2.0
margin_top = 2.0
margin_right = 256.0
margin_bottom = 30.0

[node name="tex" type="TextureRect" parent="p/v/lcps/v/Title/h"]
margin_right = 28.0
margin_bottom = 28.0
texture = ExtResource( 1 )

[node name="v1" type="VSeparator" parent="p/v/lcps/v/Title/h"]
margin_left = 32.0
margin_right = 36.0
margin_bottom = 28.0

[node name="Label1" type="Label" parent="p/v/lcps/v/Title/h"]
margin_left = 40.0
margin_top = 7.0
margin_right = 105.0
margin_bottom = 21.0
text = "LCP Name"

[node name="v2" type="VSeparator" parent="p/v/lcps/v/Title/h"]
margin_left = 109.0
margin_right = 113.0
margin_bottom = 28.0

[node name="Label2" type="Label" parent="p/v/lcps/v/Title/h"]
margin_left = 117.0
margin_top = 7.0
margin_right = 192.0
margin_bottom = 21.0
text = "LCP Version"

[node name="v3" type="VSeparator" parent="p/v/lcps/v/Title/h"]
margin_left = 196.0
margin_right = 200.0
margin_bottom = 28.0

[node name="Label3" type="Label" parent="p/v/lcps/v/Title/h"]
margin_left = 204.0
margin_top = 7.0
margin_right = 254.0
margin_bottom = 21.0
text = "Enabled"

[node name="HBoxContainer" type="HBoxContainer" parent="p/v"]
margin_left = 166.0
margin_top = 266.0
margin_right = 220.0
margin_bottom = 286.0
size_flags_horizontal = 4
custom_constants/separation = 32

[node name="cancel" type="Button" parent="p/v/HBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="item_selected" from="p/v/h/o" to="." method="_on_o_item_selected"]
[connection signal="pressed" from="p/v/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="p/v/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
